Fixed z-index issue and added automathic counters

--- a/css/layout.css
+++ b/css/layout.css
@@ -11,14 +11,15 @@ html {
 /* Hidden elements */
 .hidden { display: none!important; }
 
-.wrapper { width: 100%; height: 100%; position: relative; }
+.wrapper { width: 100%; height: 100%; position: relative;  counter-reset: section; }
 	.view {
 		background: #fff;
 		position: absolute;
-		left: 0;
-		top: 0;
+		left: -2.5rem;
 		right: 2.5rem;
+		top: 0;
 		bottom: 0;
+		padding-left: 2.5rem;
 		transform: translate(0);
 		transition: all 0.3s ease;
 		-moz-user-select: none;
@@ -26,9 +27,17 @@ html {
 	}
 	.view.notransition { transition: none; }
 	.view.next { z-index: 5; }
-
 	[data-viewport="end"] { transform: translateX(100%); }
-	[data-viewport="start"] { transform: translateX(-100%); }
+
+	.view:after {
+		content: counter(section);
+		counter-increment: section;
+		position: absolute;
+		left: 0;
+		top: 2.5rem;
+		font-size: 3.2rem;
+		color: #333;
+	}
 
 	.reload { position: absolute; left: 1rem; bottom: 1rem; z-index: 5; }
 
